Fixed logo not showing, and added content to the content div

--- a/style.css
+++ b/style.css
@@ -1,19 +1,28 @@
 .header {
-    font-family: roboto;
-    background: papayawhip;
     display: flex;
-    flex: 1;
-    justify-content: space-evenly;
+    background-color: #1f2937;
+    justify-content: space-between;
+    padding: 0px;
+    text-align: center;
+}
+
+.h1 {
+    color: white;
 }
 
 .content {
     font-family: roboto;
+    background-color: #1f2937;
 }
 
 .footer {
     font-family: roboto;
     background-color: #1f2937;
+    padding: 10px;
+    margin-top: 10px;
 }
 
-.logo {
+.button {
+    
 }
+
